--- a/modules/argocd/helm/templates/application.yaml
+++ b/modules/argocd/helm/templates/application.yaml
@@ -1,23 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: url-shortener
+  name: root-application
   namespace: argocd
 spec:
-  project: url-shortener
+  project: default
   source:
-    repoURL: https://github.com/your-org/gitops-config.git
-    targetRevision: HEAD
-    path: helm/url-shortener-umbrella
-    helm:
-      valueFiles:
-        - values.yaml
+    repoURL: {{ .Values.gitops.repoUrl }}
+    targetRevision: {{ .Values.gitops.targetRevision }}
+    path: {{ .Values.gitops.path }}
   destination:
     server: https://kubernetes.default.svc
-    namespace: url-shortener
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
